# aws-sdk-cpp-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  hello.cc  hello.h  main.cc
