load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [":aws_sdk_cpp"],
)

cmake(
    name = "aws_sdk_cpp",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_ONLY": "s3;rds",
        "BUILD_SHARED_LIBS": "OFF",  # Use static libraries (.a) instead of shared (.so)
        "ENABLE_TESTING": "OFF",
    },
    #    install = False,
    lib_source = "@aws_sdk_cpp//:all_srcs",
    out_static_libs = [
        "libaws-cpp-sdk-core.a",
        "libaws-cpp-sdk-s3.a",
        "libaws-cpp-sdk-rds.a",
        "libaws-c-common.a",
        "libaws-c-compression.a",
        "libs2n.a",
        "libaws-c-cal.a",
        "libaws-c-io.a",
        "libaws-c-http.a",
        "libaws-c-auth.a",
        "libaws-c-s3.a",
        "libaws-c-mqtt.a",
        "libaws-checksums.a",
        "libaws-c-event-stream.a",
        "libaws-crt-cpp.a",
    ],
)
