load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [":aws_sdk_cpp"],
)

cmake(
    name = "aws_sdk_cpp",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_ONLY": "s3;rds",
        "BUILD_SHARED_LIBS": "ON",  # Use dynamic libraries (.so) instead of static (.a)
        "ENABLE_TESTING": "OFF",
    },
    install = True,
    lib_source = "@aws_sdk_cpp//:all_srcs",
)
